# GeometricTools

GTE/: .gitignore  CMakeLists.txt
GTE/Mathematics/: AlignedBox.h  AlignedBoxS2.h  AlignedHalfspace.h  AxisAngle.h  CDQuery.h  CDistAlignedBoxAlignedBox.h  CDistAlignedBoxAlignedHalfspace.h  CellGridS2.h  Complement.h  ContAlignedBox.h  ContAlignedBoxS2.h  ContCone.h  ContConvexPolyhedronH.h  (+45 more)
GTE/Test/Mathematics/: AlignedBoxS2_Test.cpp  AxisAngle_Test.cpp  CDistAlignedBoxAlignedBox_PTest.cpp  CMakeLists.txt  CSG_Test.cpp  CellGridS2_test.cpp  ContAlignedBoxS2_Test.cpp  ContCone_Test.cpp  ContConvexPolyhedronH_PTest.cpp  ContHalfspace_Test.cpp  ContHypersphere_Test.cpp  ContRectView3Cone3_Test.cpp  GridAlignedBox_Test.cpp  GridHyperellipsoid_Test.cpp  GridHypersphere_Test.cpp  Hyperellipsoid_Test.cpp  Intersections_Test.cpp  IntervalIntersection_Test.cpp  Interval_PTest.cpp  Interval_Test.cpp  IntrAlignedBoxConvexPolyhedronH_Test.cpp  IntrAlignedBoxHalfspace_Test.cpp  MakeAlignedBoxS2_PTest.cpp  MakeAlignedBoxS2_Test.cpp  MakeHalfspace_Test.cpp  PointS2_PTest.cpp  PointS2_Test.cpp  RectView3_Test.cpp  SDistAlignedBoxAlignedBox_PTest.cpp  SDistPointCone_PTest.cpp  SDistPointHalfspace_PTest.cpp  SDistPointHypersphere_PTest.cpp  Vector3_Test.cpp
GTE/python/src/: CMakeLists.txt  cone_bindings.cpp  ellipsoid_bindings.cpp  eulerangles_bindings.cpp  gte_bindings.cpp  halfspace_bindings.cpp  matrix_bindings.cpp  points2_bindings.cpp  randomsurfacegrid_bindings.hpp  rectview_bindings.cpp  rotation_bindings.cpp  sphere_bindings.cpp  vector_bindings.cpp  vector_bindings.hpp
(+2 files in other folders)
